# IN3110

./: README.md
assignment1/: friendly_greeting.txt  less_friendly_greeting.txt
assignment2/: README.md  array_class.py  test_array.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: IN3110-augustfe.code-workspace  README.md  collect_dates.py  example-plot.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
assignment4/Notebooks/: hvaskjer.ipynb  prototyping.ipynb  reset.ipynb
assignment4/tests/: test_fetch_player_statistics.py  test_filter_urls.py
assignment5/templates/: strompris.html
